[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Eye.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Images/girl_character.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Girl.gd" type="Script" id=3]
[ext_resource path="res://Assets/Images/heart.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/heart3.png" type="Texture" id=5]
[ext_resource path="res://Assets/SFX/girl_saved111.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/SFX/girl_saved11.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/SFX/girl_saved1.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Images/tears.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22, 22 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.0787879, 0.763636, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 5, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 7 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.0106383, 0.256818 ), 0.0, 0.0, 0, 0, Vector2( 0.319149, 0.720455 ), 1.98255, 1.98255, 0, 0, Vector2( 0.829787, 0.993182 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -6.15273, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 52.06
gravity = Vector3( 0, 40, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.54
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )

[node name="Girl" type="RigidBody2D"]
mass = 1.25
contacts_reported = 1
contact_monitor = true
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
texture = ExtResource( 2 )

[node name="Eye" parent="CollisionShape2D/Sprite" instance=ExtResource( 1 )]
position = Vector2( -6.06205, -2.5743 )
scale = Vector2( 0.75, 0.75 )
pupil_offset = 3.0

[node name="Tears" type="Particles2D" parent="CollisionShape2D/Sprite/Eye"]
position = Vector2( 0, 7 )
amount = 1
process_material = SubResource( 2 )
texture = ExtResource( 9 )

[node name="Eye2" parent="CollisionShape2D/Sprite" instance=ExtResource( 1 )]
position = Vector2( 6.06206, -2.5743 )
scale = Vector2( 0.75, 0.75 )
pupil_offset = 3.0

[node name="Tears" type="Particles2D" parent="CollisionShape2D/Sprite/Eye2"]
position = Vector2( 0, 7 )
amount = 1
process_material = SubResource( 2 )
texture = ExtResource( 9 )

[node name="ParticleHeart" type="Particles2D" parent="CollisionShape2D/Sprite"]
position = Vector2( -1.27203, -13.2377 )
z_index = 2
emitting = false
amount = 4
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 4 )

[node name="ParticleHeart2" type="Particles2D" parent="CollisionShape2D/Sprite"]
position = Vector2( -1.27203, -13.2377 )
z_index = 2
emitting = false
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 5 )

[node name="AudioKiss" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="AudioKiss"]
stream = ExtResource( 8 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="AudioKiss"]
stream = ExtResource( 7 )

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="AudioKiss"]
stream = ExtResource( 6 )
